# snntorch_network

./: .gitignore  .pdm-python  README.md  pyproject.toml
nni_experiments/AHPC_7_balanced_encoder/config/: config_1.yml
nni_experiments/AHPC_7_balanced_no_encoder/code/: config.py  experiment1.py
nni_experiments/AHPC_7_balanced_no_encoder/config/: config_1.yml
nni_experiments/AHPC_7_best_encoder/code/: config.py  experiment1.py
nni_experiments/AHPC_7_best_encoder/config/: config_1.yml
nni_experiments/AHPC_7_best_no_encoder/config/: config_1.yml
notebook/: AHPC_net_quant.ipynb  AHPC_net_quant_debug.ipynb  KDE_metrics.ipynb  LSTM_eval.ipynb  data_to_fixed.ipynb  dataset_parsing.ipynb  event_dataset.ipynb  experiment_visualizer.ipynb  index_to_class.ipynb  inibitory_net_test.ipynb  monitor_try.ipynb  net_loss_try.ipynb  save_and_load_net.ipynb  sequential_net _AHPC.ipynb  sequential_net _AHPC_QUANT_assist.ipynb  sequential_net _AHPC_assist.ipynb  sequential_net _quantize.ipynb  spike_plot.ipynb  train_inibitory_state_quantization.ipynb  try_snntorch.ipynb
scripts/: Dockerfile  build.sh  gen_new_experiment.sh  jupyter_server.sh  run.sh  run.sh   run_experiment.sh
snntorch_network.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: RecurrentAHPC.py  RecurrentAHPC_debug.py  assistant.py  data_loading.py  dataloader.py  encoding.py  networks.py  networks_debug.py  networks_debug_state_quant.py  stats.py  utils.py
src/snntorch_network/: RecurrentBlock.py  assistant.py  dataloader.py  my_network.py  stats.py  utils.py
(+38 files in other folders)
